Adds local file dependencies for server packages
Switches several server package dependencies to use local file
references in package manifests and lockfiles. Enables local
development and ensures that the project resolves to local
implementations during builds and testing.

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "dependencies": {
     "@modelcontextprotocol/server-everything": "*",
-    "@modelcontextprotocol/server-memory": "*",
     "@modelcontextprotocol/server-filesystem": "*",
-    "@modelcontextprotocol/server-sequential-thinking": "*"
+    "@modelcontextprotocol/server-memory": "*",
+    "@modelcontextprotocol/server-sequential-thinking": "*",
+    "@modelcontextprotocol/servers": "file:"
   }
 }
